- Implemented: EventSystem, option in Settings to enable/disable URL call logging containing full URL path
- Implemented: GUI, OpenZWave added Refresh Node Information button, styling
- Fixed: GUI, Dashboard icon incremental counter (energy generated) not correct (#3231)
- Fixed: GUI, device table initial order column
- Fixed: GUI, Switch Log, date parsing in device log (#3206)
- Fixed: GUI, Weight Log now displays correct Unit (#3211)
- Fixed: GUI, OpenZWave Abort Include/Exclude button
- Fixed: YouLess, possible buffer overflow (#3261)
- Fixed: notification, Telegram error when odd number of underscores in text
- Updated: OpenZWave version 1.6
- Updated: dzVents (version 2.4.22, See dzVents/documentation/history.md)

Version 4.10717 (May 9th 2019)
- Fixed: dzVents, Allowing no error message for HTTP calls (#3191)
- Fixed: EcoCompteur now uses the port specified in the hardware setup (#3184)
- Fixed: Log for Weight sensor (#3192)
- Fixed: issue with Session ID/Login
- Fixed: issue with slightly  to large labels for the selector switch (#3187)
- Updated: dzVents (version 2.4.19, See dzVents/documentation/history.md)

Version 4.10658 (May 5th 2019)
- Implemented: [BleBox] Add support for airSensor and use the newest api for shutterBox
- Implemented: Alecto WS5500 implemented (pTypeWeather)
- Implemented: Anna Thermostat Added ability to select presets on the Anna via selector switch. Added ability to update the state of the proximity switch in the Anna thermostat.
- Implemented: Better graph display for thermostat devices
- Implemented: Blinds T14/R15/T16 to lights.html
- Implemented: CayenneLPP, added initial support for LPP_UNIXTIME
- Implemented: Cereal Proxy
- Implemented: Custom icons for: Contact Door Contact Push On Push Off Door Lock Door Lock Inverted
- Implemented: Devices Tab, Scene/Group log icon added
- Implemented: EnOcean3 implemented EPP D2-03-0A
- Implemented: EventSystem logging name when issuing thermostat SetPoint/Mode/Fan command