@@ -5,6 +5,7 @@ Version 4.xxxxx (xxx 2019)
 - Fixed: GUI, Dashboard icon incremental counter (energy generated) not correct (#3231)
 - Fixed: GUI, device table initial order column
 - Fixed: GUI, Switch Log, date parsing in device log (#3206)
+- Fixed: GUI, Floorplan, contact type can no longer be switch
 - Fixed: GUI, Weight Log now displays correct Unit (#3211)
 - Fixed: GUI, OpenZWave Abort Include/Exclude button
 - Fixed: YouLess, possible buffer overflow (#3261)
